--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,121 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
+CherryPy==3.2.2
+Cython==0.21dev
+Jinja2==2.7.1
+Mako==0.7.3
+MarkupSafe==0.15
+Mirage==0.9.5.1
+MySQL-python==1.2.3
+Pillow==2.0.0
+PuLP==1.5.4
+PyMySQL==0.5
+PyYAML==3.10
+Pygments==1.6
+Pyste==0.9.10
+Sphinx==1.2b2
+UniConvertor==1.1.4
+Unidecode==0.04.14
+ad3==2.0
+apt-xapian-index==0.45
 argparse==1.2.1
+beamer-animation==1.0
+beautifulsoup4==4.1.2
+breathe==1.0.0
+cdec==0.0.0
+chardet==2.0.1
+configobj==4.7.2
+corenlp==0.0.14
+corenlp-python==3.2.0-3
+cvxopt==1.1.6
+decoding==0.0.0
+decorator==3.3.3
+dirspec==4.2.0
 distribute==0.6.34
-gunicorn==19.0.0
-itsdangerous==0.24
+docutils==0.11
+dot2tex==2.8.7
+epc==0.0.5
+gurobipy==5.6.0
+httplib2==0.7.7
+ipython==1.1.0
+jedi==0.7.0
+joblib==0.6.4
+jsonrpclib==0.1.3
+logilab-astng==0.24.1
+logilab-common==0.58.3
+loremipsum==1.0.2
+lxml==3.1.0
+matplotlib==1.2.1
+mercurial==2.2.2
+mingus==0.4.2.3
+mysql-connector-python==0.3.2-devel
+mysql-utilities==1.0.3
+networkx==1.8.1
+nltk==2.0b9
+nose==1.1.2
+numexpr==2.0.1
+numpy==1.7.1
+ocropy==0.6
+openpyxl==1.5.8
+pandas==0.12.0
+paramiko==1.7.7.1
+pep8==1.4.6
+pexpect==2.4
+pgmagick==0.5.1
+protobuf==2.4.1
+psutil==0.6.1
+psycopg2==2.5.3
+py==1.4.12
+pychecker==0.8.19
+pycrypto==2.6
+pycups==1.9.62
+pycurl==7.19.0
+pydecode==0.1.6
+pydot==1.0.28
+pyenchant==1.6.5
+pyflakes==0.6.1
+pyfst==0.2.3
+pygobject==3.8.0
+pygraphviz==1.1
+pylint==0.26.0
+pyparsing==1.5.7
+pyqpbo==0.1
+pyquchk==0.5.2
+pysane==2.0
+pysmbc==1.0.13
+pysqlite==2.6.3
+pystruct==0.2
+pytest==2.3.2
+python-apt==0.8.8ubuntu6
+python-dateutil==2.1
+python-debian==0.1.21-nmu2ubuntu1
+pytz==2013d
+pyxdg==0.25
+pyzmq==13.1.0
+reportlab==2.6
+requests==2.0.1
+rhythmbox-ubuntuone==4.2.0
+runipy==0.0.3
+scikit-learn==0.14.1
+scipy==0.11.0
+selenium==2.33.0
+sexpdata==0.0.3
+simplegeneric==0.8.1
+simplejson==2.6.2
+six==1.4.1
+splinter==0.5.4
+statsmodels==0.4.2
+system-service==0.1.6
+tables==2.4.0
+termcolor==1.1.0
+tornado==2.4.1
+travis==0.0.1
+travis-solo==0.0.9
+unity-lens-photos==0.9
+vboxapi==1.0
+vincent==0.4.0
+virtualenv==1.9.1
 wsgiref==0.1.2
+xdress==0.3
+xlrd==0.6.1
+xlwt==0.7.4
+xmltodict==0.8.3
+yep==0.2
